--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+#MySql
+spring.jpa.hibernate.ddl-auto=name
+spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente
+spring.datasource.username=root
+spring.datasource.password=root
 
+#Exibe os Comandos SQL
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=trace
+
+#Paginação
+paginacao.qtd_por_pagina=25
+
+#JWT
+jwt.secret=
+
+#Token com Duração de 7 dias
+jwt.expiration=604800
